--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "@tauri-apps/api": "^1.3.0"
+    "@tailwindcss/typography": "^0.5.9",
+    "@tauri-apps/api": "^1.4.0",
+    "vue-router": "^4.2.4",
+    "axios": "^1.2.1",
+    "oh-vue-icons": "^1.0.0-rc3",
+    "pinia": "^2.1.4",
+    "vee-validate": "^4.7.3",
+    "vue": "^3.3.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@tauri-apps/cli": "^1.4.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.7.10",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
-    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "typescript": "^4.9.5",
+    "autoprefixer": "^10.4.14",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.22.0",
@@ -28,8 +37,10 @@
     "husky": "^8.0.2",
     "lint-staged": ">=10",
     "prettier": "^2.7.1",
-    "vite": "^4.2.1",
-    "vue-tsc": "^1.0.11",
-    "@tauri-apps/cli": "^1.3.0"
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^4.9.5",
+    "vite": "4.3.9",
+    "vue-tsc": "^1.0.11"
   }
 }
