--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "brickvault"
+name = "brickops"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -15,7 +15,7 @@ tauri-build = { version = "1.3", features = [] }
 [dependencies]
 tauri = { version = "1.3", features = ["shell-open"] }
 serde = { version = "1.0", features = [ "derive" ] }
-sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "sqlite" ] }
+sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls", "sqlite" ] }
 tokio = { version = "1.20.0", features = ["macros"] }
 serde_json = "1.0"
 home = "0.5.5"
