--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.9",
+    "@headlessui/vue": "^1.7.15",
+    "@heroicons/vue": "^2.0.18",
     "@tauri-apps/api": "^1.4.0",
-    "vue-router": "^4.2.4",
     "axios": "^1.2.1",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.4",
     "vee-validate": "^4.7.3",
     "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "@tauri-apps/cli": "^1.4.0",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^18.7.10",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -36,8 +38,8 @@
     "eslint-plugin-vue": "^9.3.0",
     "husky": "^8.0.2",
     "lint-staged": ">=10",
-    "prettier": "^2.7.1",
     "postcss": "^8.4.27",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "vite": "4.3.9",
